Fixed the fact that rationales that had words longer than 77 characters would bleed outside container/not-wrap Minor spacing fix

--- a/ubcpi/static/css/ubcpi.css
+++ b/ubcpi/static/css/ubcpi.css
@@ -518,6 +518,7 @@ label.ubcpi-label {
 
 .ubcpi-solution-rationales {
     padding-left: 10px;
+    word-break: break-all;
 }
 
 .other-rationale {
